--- a/index.css
+++ b/index.css
@@ -16,12 +16,14 @@
     color: #707070;
     font-family: sans-serif;
     font-size: 15px;
+    text-decoration: none;
 }
 
 .cat-card::after
 {
     content: '';
     position: absolute;
+    z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
@@ -45,13 +47,12 @@
     margin: 0;
 }
 
-.cat-card div a
+.cat-card div h3
 {
     font-weight: normal;
     color: #333;
     margin: 7px 0;
     font-size: 20px;
-    text-decoration: none;
     display: inline-block;
     width: 180px;
     overflow: hidden;
@@ -59,7 +60,7 @@
     text-overflow: ellipsis;
 }
 
-.cat-card div a:hover
+.cat-card div h3:hover
 {
     color: lightpink;
 }
@@ -120,7 +121,7 @@ input[value='list']:checked ~ .cat-container .cat-card
     margin: 35px auto;
 }
 
-input[value='list']:checked ~ .cat-container .cat-card div a
+input[value='list']:checked ~ .cat-container .cat-card div h3
 {
     width: 480px;
     overflow: visible;
