--- a/index.css
+++ b/index.css
@@ -85,6 +85,56 @@
     }
 }
 
+.dropdown
+{
+    position: relative;
+    top: -10px;
+    display: inline-block;
+    margin: 0 20px;
+    font-family: Comic Sans MS, serif;
+}
+
+.contacts
+{
+    font-size: 20px;
+}
+
+.dropdown-content
+{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    z-index: 1;
+    min-width: 100px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.dropdown-content::after
+{
+    content: '';
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, .65);
+    border-radius: 10px;
+    opacity: 0;
+}
+
+.dropdown:hover .dropdown-content::after,
+.dropdown-content:hover::after
+{
+    opacity: 1;
+}
+
+.dropdown:hover .dropdown-content
+{
+    display: block;
+}
+
 .radio-switcher
 {
     display: none;
